Fixing word wrap issues... again...

--- a/src/main/resources/static/components/objectives/objectives.css
+++ b/src/main/resources/static/components/objectives/objectives.css
@@ -113,6 +113,6 @@
 }
 
 .wrap-text {
-	word-break:break-all;
-	white-space: pre-wrap;
+	text-align: justify;
+	word-wrap: break-word;
 }
